# pfc

./: .gitignore  404.html  CLAUDE.md  CMakeLists.txt  DEPLOYMENT.md  DOCUMENTATION.md  DOCUMENTATION_IMPROVEMENTS.md  DOCUMENTATION_SUMMARY.md  Doxyfile  NEW_CODECS_SUMMARY.md  README.md  SUCCINCT_DESIGN.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: docs.yml
api-reference/: NEW__CODECS__SUMMARY_8md.html  README_8md.html  SUCCINCT__DESIGN_8md.html  algebraic_8hpp.html  algebraic_8hpp.js  algebraic_8hpp__dep__incl.map  algebraic_8hpp__dep__incl.md5  algebraic_8hpp__incl.map  algebraic_8hpp__incl.md5  algebraic_8hpp_source.html  algorithms_8hpp.html  algorithms_8hpp.js  algorithms_8hpp__dep__incl.map  algorithms_8hpp__dep__incl.md5  algorithms_8hpp__incl.map  algorithms_8hpp__incl.md5  algorithms_8hpp_source.html  allocator__support_8hpp.html  allocator__support_8hpp.js  allocator__support_8hpp__dep__incl.map  allocator__support_8hpp__dep__incl.md5  allocator__support_8hpp__incl.map  allocator__support_8hpp__incl.md5  allocator__support_8hpp_source.html  annotated.html  annotated_dup.js  arithmetic__coding_8hpp.html  arithmetic__coding_8hpp.js  arithmetic__coding_8hpp__dep__incl.map  arithmetic__coding_8hpp__dep__incl.md5  arithmetic__coding_8hpp__incl.map  arithmetic__coding_8hpp__incl.md5  arithmetic__coding_8hpp_source.html  classes.html  classpfc_1_1BasicBitReader-members.html  classpfc_1_1BasicBitReader.html  classpfc_1_1BasicBitReader.js  classpfc_1_1BasicBitWriter-members.html  classpfc_1_1BasicBitWriter.html  classpfc_1_1BasicBitWriter.js  (+729 more)
api-reference/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  (+94 more)
api/algebraic/: index.html
api/algorithms/: index.html
api/codecs/: index.html
api/compression/: index.html
api/coordinates/: index.html
api/core/: index.html
api/crc/: index.html
api/error-handling/: index.html
api/numeric-codecs/: index.html
api/overview/: index.html
api/packed/: index.html
api/stl-integration/: index.html
api/succinct/: index.html
docs/: index.md
docs/api/: algebraic.md  algorithms.md  codecs.md  compression.md  coordinates.md  core.md  crc.md  error-handling.md  numeric-codecs.md  overview.md  packed.md  stl-integration.md  succinct.md
docs/examples/: advanced.md  algebraic.md  basic.md  codecs.md  compression.md  containers.md
docs/guides/: best-practices.md  custom-codecs.md  design-principles.md  error-handling.md  installation.md  performance.md  quick-start.md
examples/: advanced_demo.cpp  mini_demo.cpp  new_codecs_demo.cpp  tutorial.cpp
examples/advanced/: index.html
examples/algebraic/: index.html
examples/basic/: index.html
examples/codecs/: index.html
examples/compression/: index.html
examples/containers/: index.html
examples/misc/: examine_bytes.cpp  simple_test.cpp  test_list.cpp
guides/best-practices/: index.html
guides/custom-codecs/: index.html
guides/design-principles/: index.html
guides/error-handling/: index.html
guides/installation/: index.html
guides/performance/: index.html
guides/quick-start/: index.html
include/pfc/: algebraic.hpp  algorithms.hpp  allocator_support.hpp  arithmetic_coding.hpp  codecs.hpp  coordinates.hpp  core.hpp  crc.hpp  error_handling.hpp  huffman.hpp  lz77.hpp  numeric_codecs.hpp  packed.hpp  pfc.hpp  stl_integration.hpp  stream_io.hpp  succinct.hpp
papers/: Makefile  README.md  SUMMARY.md  build.sh  references.bib  whitepaper.aux  whitepaper.blg  whitepaper.tex
papers/html/: index.html
python/: CMakeLists.txt  README.md  pyproject.toml
python/bindings/: CMakeLists.txt  codec_bindings.cpp  core_bindings.cpp  error_handling.cpp  module.cpp  pfc_python.hpp
python/src/pfc_python/: __init__.py  codecs.py
python/tests/: __init__.py  test_codecs.py  test_core.py  test_edge_cases.py  test_exceptions.py  test_property_based.py
search/: search_index.json
site/: index.html  sitemap.xml
site/api/algebraic/: index.html
site/api/codecs/: index.html
site/api/compression/: index.html
site/api/coordinates/: index.html
site/api/core/: index.html
site/api/numeric-codecs/: index.html
site/api/packed/: index.html
site/examples/codecs/: index.html
site/examples/compression/: index.html
site/guides/custom-codecs/: index.html
site/guides/performance/: index.html
tests/: test_advanced.cpp  test_crc.cpp  test_new_codecs.cpp  test_production.cpp  test_stream_arithmetic.cpp  test_succinct.cpp  test_unified.cpp
